добавляет шаблон в проект

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,21 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+
+// Swiper 8.4.7
+@import "vendor/swiper";
+
+// Global
+// ---------------------------------
+
+@import "variables";
+@import "mixins";
+@import "global/fonts";
+@import "global/reboot";
+@import "global/utils";
+@import "global/container";
+
+// Blocks
+// ---------------------------------
+
+@import "blocks/btn";
