--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,33 +1,70 @@
 .btn {
-  display: block;
-  background-color: $color-cerulean-blue;
-  color: $color-default-white;
-  padding: 20px;
-  text-align: center;
-  font-size: 16px;
-  line-height: 16px;
+  display: flex;
+  background-color: $color-default-white;
+  color: $color-cerulean-blue;
+  padding: 4px;
+  padding-left: 20px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
   font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0.28px;
+  text-transform: uppercase;
+  border-radius: 30px;
   border: none;
   outline: none;
   cursor: pointer;
+  box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+  transition: color $trans-default;
 
-  @include hover-focus {
-    background-color: $color-default-white;
-    color: $color-endeavour;
-    box-shadow: inset 0 0 0 1px currentColor;
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 46px;
+    height: 46px;
+    background-color: $color-cerulean-blue;
+    border-radius: 50%;
+    color: $color-default-white;
+    margin-left: 20px;
+    transition: color $trans-default;
   }
 
-  @include active {
-    background-color: $color-endeavour;
-    color: $color-default-white;
-    box-shadow: none;
+  &:not(:disabled) {
+    @include hover-focus {
+      background-color: $color-cerulean-blue;
+      color: $color-default-white;
+      box-shadow: none;
+
+      span {
+        background-color: $color-default-white;
+        color: $color-cerulean-blue;
+      }
+    }
+
+    @include active {
+      background-color: $color-cerulean-blue;
+      color: rgba($color: $color-default-white, $alpha: 0.7);
+      box-shadow: none;
+
+      span {
+        background-color: $color-default-white;
+        color: rgba($color: $color-cerulean-blue, $alpha: 0.7);
+      }
+    }
   }
 
   &--disabled,
   &:disabled {
-    background-color: $color-mischka;
-    color: $color-default-white;
-    box-shadow: none;
+    background-color: $color-default-white;
+    color: $color-mischka;
+    box-shadow: inset 0 0 0 1px $color-mischka;
     cursor: default;
+
+    span {
+      background-color: $color-mischka;
+      color: $color-default-white;
+    }
   }
 }
