--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -51,5 +51,16 @@
   z-index: -1;
   width: 100%;
   height: 100vh;
-  background-color: rgba(45, 56, 63, 0.60);
+  background-color: rgba(13, 29, 51, 0.40);
+  animation: animation-overlay 0.5s;
+}
+
+@keyframes animation-overlay {
+  from {
+    background-color: $color-transparent;
+  }
+
+  to {
+    background-color: rgba(13, 29, 51, 0.40);
+  }
 }
