--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/data-accordion";
 
 // Global
 // ---------------------------------
@@ -17,3 +18,5 @@
 // ---------------------------------
 
 @import "blocks/btn";
+@import "blocks/header";
+@import "blocks/menu";
