Создает блок ABOUT

--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -5,11 +5,13 @@
   padding: 0 100px;
 
   @include vp-1439 {
+    width: 768px;
     padding: 0 45px;
   }
 
   @include vp-767 {
     min-width: 320px;
+    width: 320px;
     padding: 0 15px;
   }
 }
