--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import "global/reboot";
 @import "global/utils";
 @import "global/container";
+@import "global/main-wrapper";
 
 // Blocks
 // ---------------------------------
@@ -20,3 +21,6 @@
 @import "blocks/btn";
 @import "blocks/header";
 @import "blocks/menu";
+@import "blocks/hero";
+@import "blocks/about";
+@import "blocks/advantages";
