--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -31,32 +31,31 @@
     transition: color $trans-default;
   }
 
-  &:not(:disabled) {
-    @include hover-focus {
-      background-color: $color-cerulean-blue;
-      color: $color-default-white;
-      box-shadow: none;
+  @include hover-focus {
+    background-color: $color-cerulean-blue;
+    color: $color-default-white;
+    box-shadow: none;
 
-      span {
-        background-color: $color-default-white;
-        color: $color-cerulean-blue;
-      }
+    span {
+      background-color: $color-default-white;
+      color: $color-cerulean-blue;
     }
+  }
 
-    @include active {
-      background-color: $color-cerulean-blue;
-      color: rgba($color: $color-default-white, $alpha: 0.7);
-      box-shadow: none;
+  @include active {
+    background-color: $color-cerulean-blue;
+    color: rgba($color: $color-default-white, $alpha: 0.7);
+    box-shadow: none;
 
-      span {
-        background-color: $color-default-white;
-        color: rgba($color: $color-cerulean-blue, $alpha: 0.7);
-      }
+    span {
+      background-color: $color-default-white;
+      color: rgba($color: $color-cerulean-blue, $alpha: 0.7);
     }
   }
 
   &--disabled,
   &:disabled {
+    pointer-events: none;
     background-color: $color-default-white;
     color: $color-mischka;
     box-shadow: inset 0 0 0 1px $color-mischka;
@@ -65,6 +64,35 @@
     span {
       background-color: $color-mischka;
       color: $color-default-white;
+    }
+  }
+
+  &--main {
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 12px;
+      letter-spacing: 0.24px;
+
+      span {
+        width: 34px;
+        height: 34px;
+      }
+    }
+
+    svg {
+      transition: transform $trans-default;
+    }
+
+    @include hover-focus {
+      svg {
+        transform: rotate(45deg);
+      }
+    }
+
+    @include active {
+      svg {
+        transform: rotate(45deg);
+      }
     }
   }
 }
