--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,8 +1,11 @@
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 100;
   padding: 30px 0;
+  transition: transform $trans-default;
 
   .container {
     display: flex;
@@ -12,5 +15,15 @@
 
   @include vp-767 {
     padding: 20px 0;
+  }
+}
+
+.header.hidden {
+	transform: translateY(-100%);
+}
+
+.header.is-active .header__link {
+  @include vp-767 {
+    display: none;
   }
 }
