--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -1,9 +1,14 @@
 .menu {
+  position: relative;
+  z-index: 100;
   width: 134px;
   transition: width $trans-default;
+  margin-left: auto;
 
   a {
+    display: block;
     color: $color-default-white;
+    outline: none;
   }
 }
 
@@ -20,8 +25,6 @@
 
   @include vp-767 {
     width: 100%;
-    position: relative;
-    z-index: 10;
   }
 
   .menu__btn {
@@ -50,7 +53,7 @@
 .menu.opened .menu__list {
   display: flex;
   flex-direction: column;
-  gap: 28px;
+  gap: 24px;
   background-color: $color-cerulean-blue;
   color: $color-default-white;
   list-style-type: none;
@@ -58,6 +61,10 @@
   padding: 35px 25px;
   margin: 0;
   margin-top: 4px;
+
+  &:focus-within {
+    display: flex;
+  }
 }
 
 .menu__submenu {
@@ -65,8 +72,16 @@
   padding-left: 16px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  margin-top: 20px;
+  gap: 12px;
+}
+
+.menu__item,
+.menu__submenu-item {
+  display: block;
+}
+
+.menu__submenu-item:first-child {
+  margin-top: 16px;
 }
 
 .menu__link,
@@ -74,12 +89,47 @@
   line-height: 16px;
   letter-spacing: 0.32px;
   text-transform: uppercase;
+  opacity: 0.7;
+
+  @include hover-focus {
+    opacity: 1;
+    font-weight: 500;
+  }
+}
+
+.menu__link.current {
+  opacity: 1;
+  font-weight: 500;
 }
 
 .menu__tab {
+  display: flex;
+  gap: 10px;
   border: none;
   outline: none;
   color: $color-default-white;
   background-color: $color-transparent;
   padding: 0;
+}
+
+.menu__tab.is-active {
+  svg {
+    transform: rotate(180deg) translateY(-3px);
+  }
+
+  opacity: 1;
+  font-weight: 500;
+}
+
+.menu__submenu-link {
+  line-height: 16px;
+  opacity: 0.6;
+
+  @include hover-focus {
+    opacity: 0.9;
+  }
+}
+
+.menu__submenu-link.current {
+  opacity: 0.9;
 }
