--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -41,14 +41,14 @@
   position: relative;
   padding: 30px 55px 22px 60px;
   border-radius: 16px;
-  box-shadow: inset 0 0 0 1px #f0efe9;
+  box-shadow: inset 0 0 0 1px $color-alabaster;
 
   @include vp-1439 {
     padding: 31px 16px 21px 30px;
   }
 
   @include vp-767 {
-    padding: 20px 20px 20px;
+    padding: 20px;
   }
 
   span {
@@ -113,21 +113,13 @@
       line-height: 20px;
       letter-spacing: 0.16px;
     }
-
-    br {
-      display: none;
-
-      @include vp-767 {
-        display: block;
-      }
-    }
   }
 
   p {
     font-size: 16px;
     font-weight: 300;
     line-height: 20px;
-    color: #f0efe9;
+    color: $color-alabaster;
     transform: translate(-5px, -4px);
 
     @include vp-1439 {
@@ -140,64 +132,64 @@
       transform: translate(0, -4px);
     }
   }
+}
 
-  &--program {
-    p {
-      width: 178px;
+.advantages__content h3 br {
+  display: none;
 
-      @include vp-767 {
-        width: 100%;
-      }
-    }
+  @include vp-767 {
+    display: block;
+  }
+}
+
+.advantages__content--program p {
+  width: 178px;
+
+  @include vp-767 {
+    width: 100%;
+  }
+}
+
+.advantages__content--participant p {
+  width: 161px;
+
+  @include vp-1439 {
+    width: 100%;
   }
 
-  &--participant {
-    p {
-      width: 161px;
-
-      @include vp-1439 {
-        width: 100%;
-      }
-
-      @include vp-767 {
-        width: 190px;
-      }
-
-      br {
-        @include vp-1439 {
-          display: none;
-        }
-      }
-    }
+  @include vp-767 {
+    width: 190px;
   }
 
-  &--money {
-    p {
-      width: 190px;
-
-      br {
-        display: none;
-
-        @include vp-767 {
-          display: block;
-        }
-      }
+  br {
+    @include vp-1439 {
+      display: none;
     }
   }
+}
 
-  &--country {
-    p {
-      width: 142px;
+.advantages__content--money p {
+  width: 190px;
 
-      @include vp-1439 {
-        width: 100%;
-      }
+  br {
+    display: none;
 
-      br {
-        @include vp-767 {
-          display: none;
-        }
-      }
+    @include vp-767 {
+      display: block;
+    }
+  }
+}
+
+.advantages__content--country p {
+  width: 142px;
+
+  @include vp-1439 {
+    width: 100%;
+  }
+
+  br {
+    @include vp-767 {
+      display: none;
     }
   }
 }
