--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -32,11 +32,6 @@
     color: $color-default-white;
     box-shadow: none;
 
-    span {
-      background-color: $color-default-white;
-      color: $color-cerulean-blue;
-    }
-
     @include hover-focus {
       background-color: $color-default-white;
       color: $color-cerulean-blue;
@@ -47,6 +42,11 @@
         color: $color-default-white;
       }
     }
+  }
+
+  .menu__btn span {
+    background-color: $color-default-white;
+    color: $color-cerulean-blue;
   }
 }
 
@@ -61,10 +61,6 @@
   padding: 35px 25px;
   margin: 0;
   margin-top: 4px;
-
-  &:focus-within {
-    display: flex;
-  }
 }
 
 .menu__submenu {
