--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -51,8 +51,9 @@
   z-index: 10;
   width: 100%;
   height: 100vh;
-  background-color: rgba(13, 29, 51, 0.40);
+  background-color: rgba(13, 29, 51, 0.4);
   animation: animation-overlay 0.5s;
+  cursor: pointer;
 }
 
 @keyframes animation-overlay {
@@ -61,6 +62,6 @@
   }
 
   to {
-    background-color: rgba(13, 29, 51, 0.40);
+    background-color: rgba(13, 29, 51, 0.4);
   }
 }
