--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,5 @@
 @import "blocks/hero";
 @import "blocks/about";
 @import "blocks/advantages";
+@import "blocks/modal";
+@import "blocks/modal-form";
