--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,7 +9,7 @@ $color-transparent: rgba(255, 255, 255, 0);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
-
+$color-alabaster: #f0efe9;
 $color-charcoal: #484848;
 $color-cerulean-blue: #316dc2;
 $color-mischka: #a9afb7;
@@ -24,7 +24,6 @@ $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0)
 
 // переменная используемая в html для подключения скейлинга
 $fz-default: 16px;
-
 $ff-placeholder: "Manrope", "Arial", sans-serif;
 
 // Animation
@@ -32,6 +31,11 @@ $ff-placeholder: "Manrope", "Arial", sans-serif;
 
 $tf-default: ease;
 $trans-default: 0.3s $tf-default;
+
+// если требуется изинг отличный от $tf-default, то переменную называем не цифрой
+$trans-modal: 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+
+$trans-600: 0.6s $tf-default;
 
 // Viewports
 // ---------------------------------
