--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -14,7 +14,7 @@
   font-size: 32px;
   line-height: 36px;
   color: $color-cerulean-blue;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 
   @include vp-1439 {
     font-size: 28px;
@@ -30,7 +30,8 @@
 
 .form__text {
   text-align: center;
-  margin-bottom: 30px;
+  margin: 0;
+  margin-bottom: 22px;
 
   @include vp-1439 {
     line-height: 20px;
@@ -56,7 +57,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 
   @include vp-767 {
     gap: 15px;
@@ -66,7 +67,7 @@
 .form__group {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: start;
   gap: 12px;
   width: 100%;
@@ -95,11 +96,11 @@
     width: 100%;
     border: none;
     outline: none;
-    box-shadow: inset 0 0 0 1px rgba($color: $color-charcoal, $alpha: 0.4);
+    box-shadow: inset 0 0 0 1px rgba($color: $color-charcoal, $alpha: 0.3);
     background: $color-default-white;
     border-radius: 8px;
     height: 50px;
-    padding: 10px 20px;
+    padding: 5px 20px 5px 25px;
     font-size: 20px;
     line-height: 26px;
     color: $color-charcoal;
@@ -112,11 +113,81 @@
     @include vp-767 {
       font-size: 16px;
       line-height: 16px;
+      height: 44px;
+    }
+
+    @include focus {
+      box-shadow: inset 0 0 0 1px $color-charcoal;
+
+      &+label {
+        opacity: 1;
+      }
+    }
+
+    @include active {
+      box-shadow: inset 0 0 0 1px $color-charcoal;
+
+      &+label {
+        opacity: 1;
+      }
+    }
+
+    @include disabled {
+      box-shadow: inset 0 0 0  1px rgba($color: $color-mischka, $alpha: 0.5);
+      background-color: rgba($color: $color-mischka, $alpha: 0.2);
+
+      &+label {
+        color: $color-mischka;
+        opacity: 0.6;
+      }
+    }
+
+    &:invalid:focus {
+      box-shadow: inset 0 0 0 1px #ff5e66;
+      background: rgba($color: #ff5e66, $alpha: 0.2);
+    }
+  }
+
+  @include active {
+    &:not(:has(:disabled)) {
+      label {
+        opacity: 1;
+      }
+
+      input,
+      select {
+        box-shadow: inset 0 0 0 1px $color-charcoal;
+      }
+    }
+  }
+
+  @include hover {
+    &:not(:has(:disabled)) {
+      label {
+        opacity: 1;
+      }
+
+      input,
+      select {
+        box-shadow: inset 0 0 0 1px $color-charcoal;
+      }
     }
   }
 
   select {
     appearance: none;
+
+    @include active {
+      &~svg {
+        transform: rotate(180deg);
+      }
+    }
+
+    @include focus {
+      &~svg {
+        transform: rotate(180deg);
+      }
+    }
   }
 
   svg {
@@ -161,6 +232,60 @@
   }
 }
 
+.form__checkbox input {
+  @include hover-focus {
+    &+label {
+      opacity: 1;
+    }
+    &+label::after {
+      background-color: $color-default-white;
+      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+    }
+
+    &+label::before {
+      border-color: $color-cerulean-blue;
+    }
+  }
+
+  @include disabled {
+    &+label::after {
+      background-color: rgba($color: $color-cerulean-blue, $alpha: 0.6);
+      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+    }
+  }
+
+  &:invalid:focus {
+    &+label::after {
+      background-color: rgba($color: #ff5e66, $alpha: 0.2);
+      box-shadow: inset 0 0 0 1px rgba($color: #ff5e66, $alpha: 0.7);
+    }
+  }
+
+  &:checked {
+    &+label::after {
+      background-color: $color-cerulean-blue;
+    }
+
+    &+label::before {
+      position: absolute;
+      content: "";
+      z-index: 10;
+      top: 3px;
+      left: 5px;
+      width: 10px;
+      height: 6px;
+      background-color: $color-transparent;
+      border-bottom: 1px solid $color-default-white;
+      border-left: 1px solid $color-default-white;
+      transform: rotate(-45deg);
+
+      @include vp-767 {
+        top: 8px;
+      }
+    }
+  }
+}
+
 .form__checkbox label {
   &::after {
     position: absolute;
@@ -193,57 +318,6 @@
   }
 }
 
-.form__checkbox input {
-  @include disabled {
-    &+label::after {
-      background-color: rgba($color: $color-cerulean-blue, $alpha: 0.6);
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-    }
-  }
-
-  &:invalid {
-    &+label::after {
-      background-color: rgba($color: #ff5e66, $alpha: 0.2);
-      box-shadow: inset 0 0 0 1px rgba($color: #ff5e66, $alpha: 0.7);
-    }
-  }
-
-  &:checked {
-    &+label::after {
-      background-color: $color-cerulean-blue;
-    }
-
-    &+label::before {
-      position: absolute;
-      content: "";
-      z-index: 10;
-      top: 3px;
-      left: 5px;
-      width: 10px;
-      height: 6px;
-      background-color: $color-transparent;
-      border-bottom: 1px solid $color-default-white;
-      border-left: 1px solid $color-default-white;
-      transform: rotate(-45deg);
-
-      @include vp-767 {
-        top: 8px;
-      }
-    }
-
-    @include hover-focus {
-      &+label::after {
-        background-color: $color-default-white;
-        box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-      }
-
-      &+label::before {
-        border-color: $color-cerulean-blue;
-      }
-    }
-  }
-}
-
 .form__checkbox input:checked:disabled {
   &+label::after {
     background-color: #a9afb7;
@@ -261,7 +335,7 @@
 
 .form__btn {
   width: 194px;
-  margin-top: 10px;
+  margin-top: 8px;
 
   @include vp-767 {
     width: 100%;
