--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,4 +25,10 @@
 @import "blocks/about";
 @import "blocks/advantages";
 @import "blocks/modal";
-@import "blocks/modal-form";
+@import "blocks/form";
+@import "blocks/programs";
+@import "blocks/grant";
+@import "blocks/news";
+@import "blocks/faq";
+@import "blocks/reviews";
+@import "blocks/contacts";
