Корректироки по линтеру

--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -16,7 +16,8 @@
   visibility: hidden;
   opacity: 0;
 
-  transition: opacity $trans-modal,
+  transition:
+    opacity $trans-modal,
     transform $trans-modal,
     visibility $trans-modal;
 
@@ -29,75 +30,15 @@
     display: none;
   }
 
-  &__wrapper {
-    position: relative;
-
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
+  &--responsive .modal__content {
     width: 100%;
-    min-height: 100%;
-    padding: 60px 40px;
+  }
+
+  &--fit-content .modal__content {
+    width: auto;
 
     @include vp-767 {
-      padding: 60px 16px;
-    }
-  }
-
-  &__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    cursor: pointer;
-  }
-
-  &__content {
-    position: relative;
-    background-color: $color-default-white;
-    border-radius: 16px;
-  }
-
-  &__close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1;
-
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-
-    background: $color-transparent;
-    border: none;
-    cursor: pointer;
-
-    @include hover-focus {
-      color: $color-cerulean-blue;
-    }
-
-    @include active {
-      color: rgba($color: $color-cerulean-blue, $alpha: 0.6);
-    }
-  }
-
-  &--responsive {
-    .modal__content {
-      width: 100%;
-    }
-  }
-
-  &--fit-content {
-    .modal__content {
-      width: auto;
-
-      @include vp-767 {
-        width: 290px;
-      }
+      width: 290px;
     }
   }
 
@@ -108,12 +49,68 @@
   &--preload {
     transition: none;
   }
+}
 
-  &.is-active {
-    transform: scale(1);
-    visibility: visible;
-    opacity: 1;
+.modal.is-active {
+  transform: scale(1);
+  visibility: visible;
+  opacity: 1;
 
-    pointer-events: auto;
+  pointer-events: auto;
+}
+
+.modal__wrapper {
+  position: relative;
+
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+  padding: 60px 40px;
+
+  @include vp-767 {
+    padding: 60px 16px;
+  }
+}
+
+.modal__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  cursor: pointer;
+}
+
+.modal__content {
+  position: relative;
+  background-color: $color-default-white;
+  border-radius: 16px;
+}
+
+.modal__close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+
+  background: $color-transparent;
+  border: none;
+  cursor: pointer;
+
+  @include hover-focus {
+    color: $color-cerulean-blue;
+  }
+
+  @include active {
+    color: rgba($color: $color-cerulean-blue, $alpha: 0.6);
   }
 }
