--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -24,7 +24,6 @@
     font-size: 20px;
     line-height: 20px;
     margin-bottom: 35px;
-    transform: none;
     transform: translateY(2px);
   }
 }
@@ -49,7 +48,7 @@
 }
 
 .faq__element--study .faq__question-text,
-.faq__element--registration .faq__question-text{
+.faq__element--registration .faq__question-text {
   transform: translateY(-10px);
 
   @include vp-1439 {
@@ -62,7 +61,7 @@
 }
 
 .faq__element--study .faq__container,
-.faq__element--registration .faq__container{
+.faq__element--registration .faq__container {
   padding-bottom: 26px;
 
   @include vp-1439 {
@@ -79,48 +78,48 @@
   @include vp-767 {
     align-items: center;
   }
+}
 
-  button {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    min-width: 40px;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-    color: $color-default-white;
-    background-color: $color-cerulean-blue;
-    cursor: pointer;
-    transition: color $trans-default;
+.faq__question button {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  min-width: 40px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  color: $color-default-white;
+  background-color: $color-cerulean-blue;
+  cursor: pointer;
+  transition: color $trans-default;
 
-    @include hover-focus {
-      background-color: $color-default-white;
-      color: $color-cerulean-blue;
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-    }
+  @include hover-focus {
+    background-color: $color-default-white;
+    color: $color-cerulean-blue;
+    box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+  }
 
-    &::before {
-      position: absolute;
-      content: "";
-      width: 18px;
-      height: 1px;
-      background-color: currentColor;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+  &::before {
+    position: absolute;
+    content: "";
+    width: 18px;
+    height: 1px;
+    background-color: currentColor;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-    &::after {
-      position: absolute;
-      content: "";
-      width: 18px;
-      height: 1px;
-      background-color: currentColor;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(90deg);
-      transition: width $trans-default;
-    }
+  &::after {
+    position: absolute;
+    content: "";
+    width: 18px;
+    height: 1px;
+    background-color: currentColor;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(90deg);
+    transition: width $trans-default;
   }
 }
 
@@ -191,6 +190,15 @@
 
 .faq__element.is-active .faq__container {
   background-color: $color-cerulean-blue;
+  padding-bottom: 33px;
+
+  @include vp-1439 {
+    padding-bottom: 26px;
+  }
+
+  @include vp-767 {
+    padding-bottom: 15px;
+  }
 
   @include hover {
     box-shadow: 0 0 0 2px $color-default-white;
@@ -230,18 +238,6 @@
 
 .faq__element.is-active .faq__question-text h3 {
   color: $color-default-white;
-}
-
-.faq__element.is-active .faq__container{
-  padding-bottom: 33px;
-
-  @include vp-1439 {
-    padding-bottom: 26px;
-  }
-
-  @include vp-767 {
-    padding-bottom: 15px;
-  }
 }
 
 .faq__question-text h3 {
