--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -53,7 +53,7 @@
   }
 }
 
-.form__container form{
+.form__container form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -118,25 +118,25 @@
 
     @include focus {
       box-shadow: inset 0 0 0 1px $color-charcoal;
+    }
 
-      &+label {
-        opacity: 1;
-      }
+    &:focus + label {
+      opacity: 1;
     }
 
     @include active {
       box-shadow: inset 0 0 0 1px $color-charcoal;
+    }
 
-      &+label {
-        opacity: 1;
-      }
+    &:active + label {
+      opacity: 1;
     }
 
     @include disabled {
       box-shadow: inset 0 0 0  1px rgba($color: $color-mischka, $alpha: 0.5);
       background-color: rgba($color: $color-mischka, $alpha: 0.2);
 
-      &+label {
+      &:disabled + label {
         color: $color-mischka;
         opacity: 0.6;
       }
@@ -177,17 +177,14 @@
   select {
     appearance: none;
 
-    @include active {
-      &~svg {
-        transform: rotate(180deg);
-      }
+    &:active ~ svg,
+    &:focus ~ svg {
+      transform: rotate(180deg);
     }
+  }
 
-    @include focus {
-      &~svg {
-        transform: rotate(180deg);
-      }
-    }
+  select option:first-child {
+    display: none;
   }
 
   svg {
@@ -204,19 +201,6 @@
 .form__checkbox {
   margin: 0;
 
-  input {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    border: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
-  }
-
   label {
     position: relative;
     font-size: 12px;
@@ -229,44 +213,69 @@
       display: block;
       line-height: 14px;
     }
+
+    @include hover-focus {
+      &::after {
+        box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+      }
+    }
+
+    @include disabled {
+      &::after {
+        background-color: rgba($color: $color-default-white, $alpha: 0.6);
+        box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+      }
+    }
   }
 }
 
 .form__checkbox input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+
   @include hover-focus {
-    &+label {
+    +label {
       opacity: 1;
     }
-    &+label::after {
+
+    +label::after {
       background-color: $color-default-white;
       box-shadow: inset 0 0 0 1px $color-cerulean-blue;
     }
 
-    &+label::before {
+    +label::before {
       border-color: $color-cerulean-blue;
     }
   }
 
   @include disabled {
-    &+label::after {
+    +label::after {
       background-color: rgba($color: $color-cerulean-blue, $alpha: 0.6);
       box-shadow: inset 0 0 0 1px $color-cerulean-blue;
     }
   }
 
   &:invalid:focus {
-    &+label::after {
+    +label::after {
       background-color: rgba($color: #ff5e66, $alpha: 0.2);
       box-shadow: inset 0 0 0 1px rgba($color: #ff5e66, $alpha: 0.7);
     }
   }
 
   &:checked {
-    &+label::after {
+    +label::after {
       background-color: $color-cerulean-blue;
     }
 
-    &+label::before {
+    +label::before {
       position: absolute;
       content: "";
       z-index: 10;
@@ -286,49 +295,34 @@
   }
 }
 
-.form__checkbox label {
-  &::after {
-    position: absolute;
-    content: "";
-    z-index: 1;
-    width: 20px;
-    height: 20px;
-    background-color: $color-transparent;
-    box-shadow: inset 0 0 0 1px rgba($color: $color-cerulean-blue, $alpha: 0.7);
-    border-radius: 2px;
-    top: -1px;
-    left: 0;
+.form__checkbox label::after {
+  position: absolute;
+  content: "";
+  z-index: 1;
+  width: 20px;
+  height: 20px;
+  background-color: $color-transparent;
+  box-shadow: inset 0 0 0 1px rgba($color: $color-cerulean-blue, $alpha: 0.7);
+  border-radius: 2px;
+  top: -1px;
+  left: 0;
 
-    @include vp-767 {
-      top: 3px;
-    }
-  }
-
-  @include hover-focus {
-    &::after {
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-    }
-  }
-
-  @include disabled {
-    &::after {
-      background-color: rgba($color: $color-default-white, $alpha: 0.6);
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-    }
+  @include vp-767 {
+    top: 3px;
   }
 }
 
 .form__checkbox input:checked:disabled {
-  &+label::after {
+  +label::after {
     background-color: #a9afb7;
     box-shadow: none;
   }
 
-  &+label::before {
+  +label::before {
     border-color: $color-default-white;
   }
 
-  &+label {
+  +label {
     pointer-events: none;
   }
 }
