--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,8 @@
 // ---------------------------------
 
 @import "blocks/btn";
+@import "blocks/input-group";
+@import "blocks/checkbox";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/hero";
@@ -32,3 +34,4 @@
 @import "blocks/faq";
 @import "blocks/reviews";
 @import "blocks/contacts";
+@import "blocks/feedback";
