--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -99,4 +99,29 @@
   &--main svg {
     transition: transform $trans-default;
   }
+
+  &--dark {
+    box-shadow: inset 0 0 0 1px $color-default-white;
+    color: $color-default-white;
+    background-color: $color-transparent;
+
+    @include hover-focus {
+      background-color: $color-default-white;
+      color: $color-cerulean-blue;
+
+      span {
+        background-color: $color-cerulean-blue;
+        color: $color-default-white;
+      }
+    }
+
+    @include active {
+      color: rgba($color: $color-cerulean-blue, $alpha: 0.7);
+    }
+  }
+
+  &--dark span {
+    background-color: $color-default-white;
+    color: $color-cerulean-blue;
+  }
 }
