--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -12,8 +12,10 @@
   display: block;
   text-align: center;
   font-size: 32px;
+  font-weight: 400;
   line-height: 36px;
   color: $color-cerulean-blue;
+  margin: 0;
   margin-bottom: 10px;
 
   @include vp-1439 {
@@ -25,6 +27,11 @@
     font-size: 18px;
     line-height: 18px;
     margin-bottom: 15px;
+  }
+
+  &--dark {
+    color: $color-default-white;
+    text-align: left;
   }
 }
 
@@ -51,6 +58,12 @@
       display: block;
     }
   }
+
+  &--dark {
+    color: $color-alabaster;
+    opacity: 0.9;
+    text-align: left;
+  }
 }
 
 .form__container form {
@@ -64,274 +77,15 @@
   }
 }
 
-.form__group {
-  position: relative;
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: start;
-  gap: 12px;
-  width: 100%;
-  margin: 0;
-
-  @include vp-767 {
-    gap: 8px;
-  }
-
-  label {
-    font-size: 14px;
-    line-height: 18px;
-    opacity: 0.8;
-
-    @include vp-1439 {
-      line-height: 20px;
-    }
-
-    @include vp-767 {
-      line-height: 14px;
-    }
-  }
-
-  input,
-  select {
-    width: 100%;
-    border: none;
-    outline: none;
-    box-shadow: inset 0 0 0 1px rgba($color: $color-charcoal, $alpha: 0.3);
-    background: $color-default-white;
-    border-radius: 8px;
-    height: 50px;
-    padding: 5px 20px 5px 25px;
-    font-size: 20px;
-    line-height: 26px;
-    color: $color-charcoal;
-
-    @include vp-1439 {
-      font-size: 18px;
-      line-height: 18px;
-    }
-
-    @include vp-767 {
-      font-size: 16px;
-      line-height: 16px;
-      height: 44px;
-    }
-
-    @include focus {
-      box-shadow: inset 0 0 0 1px $color-charcoal;
-    }
-
-    &:focus + label {
-      opacity: 1;
-    }
-
-    @include active {
-      box-shadow: inset 0 0 0 1px $color-charcoal;
-    }
-
-    &:active + label {
-      opacity: 1;
-    }
-
-    @include disabled {
-      box-shadow: inset 0 0 0  1px rgba($color: $color-mischka, $alpha: 0.5);
-      background-color: rgba($color: $color-mischka, $alpha: 0.2);
-
-      &:disabled + label {
-        color: $color-mischka;
-        opacity: 0.6;
-      }
-    }
-
-    &:invalid:focus {
-      box-shadow: inset 0 0 0 1px #ff5e66;
-      background: rgba($color: #ff5e66, $alpha: 0.2);
-    }
-  }
-
-  @include active {
-    &:not(:has(:disabled)) {
-      label {
-        opacity: 1;
-      }
-
-      input,
-      select {
-        box-shadow: inset 0 0 0 1px $color-charcoal;
-      }
-    }
-  }
-
-  @include hover {
-    &:not(:has(:disabled)) {
-      label {
-        opacity: 1;
-      }
-
-      input,
-      select {
-        box-shadow: inset 0 0 0 1px $color-charcoal;
-      }
-    }
-  }
-
-  select {
-    appearance: none;
-
-    &:active ~ svg,
-    &:focus ~ svg {
-      transform: rotate(180deg);
-    }
-  }
-
-  select option:first-child {
-    display: none;
-  }
-
-  svg {
-    position: absolute;
-    right: 20px;
-    top: 47px;
-
-    @include vp-767 {
-      top: 40px;
-    }
-  }
-}
-
-.form__checkbox {
-  margin: 0;
-
-  label {
-    position: relative;
-    font-size: 12px;
-    line-height: 12px;
-    padding-left: 30px;
-    opacity: 0.9;
-    text-align: start;
-
-    @include vp-767 {
-      display: block;
-      line-height: 14px;
-    }
-
-    @include hover-focus {
-      &::after {
-        box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-      }
-    }
-
-    @include disabled {
-      &::after {
-        background-color: rgba($color: $color-default-white, $alpha: 0.6);
-        box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-      }
-    }
-  }
-}
-
-.form__checkbox input {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  border: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-
-  @include hover-focus {
-    +label {
-      opacity: 1;
-    }
-
-    +label::after {
-      background-color: $color-default-white;
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-    }
-
-    +label::before {
-      border-color: $color-cerulean-blue;
-    }
-  }
-
-  @include disabled {
-    +label::after {
-      background-color: rgba($color: $color-cerulean-blue, $alpha: 0.6);
-      box-shadow: inset 0 0 0 1px $color-cerulean-blue;
-    }
-  }
-
-  &:invalid:focus {
-    +label::after {
-      background-color: rgba($color: #ff5e66, $alpha: 0.2);
-      box-shadow: inset 0 0 0 1px rgba($color: #ff5e66, $alpha: 0.7);
-    }
-  }
-
-  &:checked {
-    +label::after {
-      background-color: $color-cerulean-blue;
-    }
-
-    +label::before {
-      position: absolute;
-      content: "";
-      z-index: 10;
-      top: 3px;
-      left: 5px;
-      width: 10px;
-      height: 6px;
-      background-color: $color-transparent;
-      border-bottom: 1px solid $color-default-white;
-      border-left: 1px solid $color-default-white;
-      transform: rotate(-45deg);
-
-      @include vp-767 {
-        top: 8px;
-      }
-    }
-  }
-}
-
-.form__checkbox label::after {
-  position: absolute;
-  content: "";
-  z-index: 1;
-  width: 20px;
-  height: 20px;
-  background-color: $color-transparent;
-  box-shadow: inset 0 0 0 1px rgba($color: $color-cerulean-blue, $alpha: 0.7);
-  border-radius: 2px;
-  top: -1px;
-  left: 0;
-
-  @include vp-767 {
-    top: 3px;
-  }
-}
-
-.form__checkbox input:checked:disabled {
-  +label::after {
-    background-color: #a9afb7;
-    box-shadow: none;
-  }
-
-  +label::before {
-    border-color: $color-default-white;
-  }
-
-  +label {
-    pointer-events: none;
-  }
-}
-
 .form__btn {
   width: 194px;
   margin-top: 8px;
 
   @include vp-767 {
+    width: 100%;
+  }
+
+  &--dark {
     width: 100%;
   }
 }
