--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -104,6 +104,11 @@
     box-shadow: inset 0 0 0 1px $color-default-white;
     color: $color-default-white;
     background-color: $color-transparent;
+    padding-left: 31%;
+
+    @include vp-767 {
+      padding-left: 29%;
+    }
 
     @include hover-focus {
       background-color: $color-default-white;
