--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -32,23 +32,33 @@
   &--dark {
     color: $color-default-white;
     text-align: left;
+    margin-bottom: 25px;
+
+    @include vp-1439 {
+      margin-bottom: 28px;
+    }
+
+    @include vp-767 {
+      margin-bottom: 19px;
+    }
   }
 }
 
 .form__text {
   text-align: center;
   margin: 0;
-  margin-bottom: 22px;
+  margin-bottom: 25px;
 
   @include vp-1439 {
     line-height: 20px;
+    margin-bottom: 26px;
   }
 
   @include vp-767 {
     font-size: 14px;
     width: 220px;
     margin: 0 auto;
-    margin-bottom: 25px;
+    margin-bottom: 29px;
   }
 
   br {
@@ -63,6 +73,12 @@
     color: $color-alabaster;
     opacity: 0.9;
     text-align: left;
+    margin-left: 0;
+    margin-right: 0;
+
+    @include vp-767 {
+      width: 100%;
+    }
   }
 }
 
@@ -70,10 +86,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 12px;
+
+  @include vp-1439 {
+    gap: 10px;
+  }
 
   @include vp-767 {
-    gap: 15px;
+    gap: 24px;
   }
 }
 
