--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -42,6 +42,11 @@
 
 .scroll-lock {
   overflow: hidden;
+  padding: 0 calc(17px - (100vw - 100%)) 0 0;
+
+  @include vp-1439 {
+    padding: 0;
+  }
 }
 
 .overlay {
@@ -52,7 +57,7 @@
   width: 100%;
   height: 100vh;
   background-color: rgba(13, 29, 51, 0.4);
-  animation: animation-overlay 0.5s;
+  animation: animation-overlay $trans-modal;
   cursor: pointer;
 }
 
@@ -110,4 +115,14 @@
   color: #ff5e66;
   font-size: 12px;
   line-height: 14px;
+}
+
+.success-message {
+  padding: 20px 30px;
+  border-radius: 16px;
+  font-size: 20px;
+  line-height: 26px;
+  color: $color-default-white;
+  background-color: $color-cerulean-blue;
+  opacity: 0.6;
 }
