--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,8 @@
 @import "blocks/btn";
 @import "blocks/input-group";
 @import "blocks/checkbox";
+@import "blocks/social";
+@import "blocks/navigation";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/hero";
@@ -35,3 +37,4 @@
 @import "blocks/reviews";
 @import "blocks/contacts";
 @import "blocks/feedback";
+@import "blocks/footer";
