--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -70,6 +70,7 @@
   @include vp-1439 {
     width: 1032px;
   }
+
   @include vp-767 {
     padding-bottom: 72px;
     width: auto;
@@ -118,7 +119,7 @@
   max-width: 100%;
   background-color: $color-default-white;
   padding: 18px 36px 0 18px;
-  border-radius: 12px 12px 0px 0px;
+  border-radius: 12px 12px 0 0;
   transform: translateY(3px);
 
   @include vp-1439 {
@@ -227,7 +228,7 @@
   background-color: $color-default-white;
   padding: 10px 18px;
   min-height: 79px;
-  border-radius: 0 12px 12px 12px;
+  border-radius: 0 12px 12px;
 
   @include vp-1439 {
     width: 263px;
