--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,12 +1,183 @@
 .news {
-  height: 650px;
-  background-color: #cccccc;
+  width: 100%;
+  overflow: hidden;
+}
+
+.news__title {
+  text-align: center;
+  margin: 0;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 50px;
+  color: $color-cerulean-blue;
+  margin-bottom: 52px;
 
   @include vp-1439 {
-    height: 940px;
+    font-size: 34px;
+    margin-bottom: 43px;
   }
 
   @include vp-767 {
-    height: 742px;
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 30px;
+  }
+}
+
+.news__slide.swiper-slide {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: start;
+  width: 286px;
+  height: 400px;
+
+  @include vp-1439 {
+    width: 324px;
+    height: 350px;
+  }
+
+  @include vp-767 {
+    width: 290px;
+    height: 0px;
+  }
+}
+
+.news__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.news__btn {
+  box-shadow: none;
+  padding: 0;
+  background-color: $color-transparent;
+  transform: translateY(-2px);
+
+  @include vp-1439 {
+    transform: translateY(-3px);
+  }
+
+  span {
+    width: 30px;
+    height: 30px;
+    margin: 0;
+  }
+
+  @include hover-focus {
+    background-color: $color-transparent;
+
+    span {
+      background-color: $color-default-white;
+      box-shadow: none;
+    }
+  }
+
+  @include active {
+    opacity: 70px;
+    box-shadow: none;
+
+    span {
+      box-shadow: none;
+    }
+  }
+}
+
+.news__subtitle {
+  position: relative;
+  width: 194px;
+  max-width: 100%;
+  background-color: $color-alabaster;
+  padding: 18px 36px 0 18px;
+  border-radius: 12px 12px 0 0;
+  transform: translateY(3px);
+
+  @include vp-1439 {
+    width: 173px;
+    padding-top: 17px;
+  }
+
+  @include vp-767 {
+    width: 146px;
+    padding-right: 35px;
+    padding-top: 27px;
+  }
+
+  h3 {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 26px;
+    color: $color-cerulean-blue;
+    transform: translateY(-5px);
+
+    @include vp-1439 {
+      font-size: 20px;
+      line-height: 24px;
+      transform: translateY(-4px);
+    }
+
+    @include vp-767 {
+      font-size: 16px;
+      line-height: 18px;
+      transform: translateY(-9px);
+    }
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 18px;
+    height: 18px;
+    background-image: url("../../img/svg/angle-programs.svg");
+    bottom: 3px;
+    right: -18px;
+  }
+}
+
+.news__text {
+  p {
+    font-size: 14px;
+    line-height: 18px;
+    width: 239px;
+    transform: translateY(-2px);
+
+    @include vp-1439 {
+      line-height: 20px;
+      width: 181px;
+      transform: translateY(-3px);
+    }
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 14px;
+      transform: translateY(-2px);
+    }
+  }
+}
+
+.news__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 321px;
+  background-color: $color-alabaster;
+  padding: 10px 18px;
+  min-height: 79px;
+  border-radius: 0 12px 0 12px;
+
+  @include vp-1439 {
+    width: 263px;
+    min-height: 77px;
+    padding-bottom: 7px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+    min-height: 69px;
   }
 }
