--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 // ---------------------------------
 
 @import "blocks/btn";
+@import "blocks/tab";
 @import "blocks/input-group";
 @import "blocks/checkbox";
 @import "blocks/social";
@@ -32,6 +33,7 @@
 @import "blocks/form";
 @import "blocks/programs";
 @import "blocks/grant";
+@import "blocks/tabs";
 @import "blocks/news";
 @import "blocks/faq";
 @import "blocks/reviews";
