Добавлен блок новостей. из недоделанного остался кастомный селект и слайдер табов в блоке новостей

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -39,6 +39,11 @@
 }
 
 // Desktop first
+@mixin vp-1440 {
+  @media (min-width: ($vp-1440)) {
+    @content;
+  }
+}
 
 @mixin vp-1439 {
   @media (max-width: ($vp-1440 - 1px)) {
