--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -10,38 +10,179 @@
   font-size: 50px;
   line-height: 50px;
   color: $color-cerulean-blue;
-  margin-bottom: 52px;
+  margin-bottom: 45px;
+  padding-top: 4px;
 
   @include vp-1439 {
     font-size: 34px;
-    margin-bottom: 43px;
+    margin-bottom: 30px;
+    padding: 0;
+    transform: translateY(-1px);
   }
 
   @include vp-767 {
     font-size: 20px;
     line-height: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 27px;
+    padding-top: 2px;
+    transform: none;
   }
 }
 
-.news__slide.swiper-slide {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: start;
-  width: 286px;
-  height: 400px;
+.news__swiper.swiper .swiper-wrapper {
+  user-select: none;
 
   @include vp-1439 {
-    width: 324px;
-    height: 350px;
+    max-height: 730px;
+    display: grid;
+    grid-template-rows: 350px 350px;
+    grid-auto-flow: column;
+    row-gap: 30px;
   }
 
   @include vp-767 {
-    width: 290px;
-    height: 0px;
+    max-height: 590px;
+    row-gap: 0;
   }
+}
+
+.news__swiper .news__slide.swiper-slide,
+.news__swiper .news__slide.swiper-slide.swiper-slide-next,
+.news__swiper .news__slide.swiper-slide.swiper-slide-prev {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  height: 400px;
+  max-width: 286px;
+
+  @include vp-1439 {
+    height: 350px;
+    max-width: 324px;
+    min-width: 324px;
+  }
+
+  @include vp-767 {
+    height: 330px;
+    max-width: 290px;
+    min-width: 290px;
+  }
+}
+
+.news__swiper .news__slide.swiper-slide:nth-child(2n) {
+  @include vp-767 {
+    height: 240px;
+  }
+}
+
+.news__swiper.swiper .swiper-slide-active {
+  @include vp-1440 {
+    min-width: 604px;
+
+    .news__subtitle {
+      width: 291px;
+      padding: 15px 10px 4px 0;
+      transform: translateY(3px);
+    }
+
+    .news__subtitle::after {
+      bottom: 3px;
+    }
+
+    .news__wrapper {
+      width: 389px;
+    }
+
+    h3 {
+      transform: translateY(-1px);
+    }
+
+    p {
+      width: 325px;
+      transform: translateY(-3px);
+    }
+
+    .news__time {
+      position: relative;
+      width: 78px;
+      background-color: $color-alabaster;
+      padding: 2px 10px 4px 0;
+      border-radius: 0 12px 0 0;
+      transform: translateY(8px);
+    }
+  }
+}
+
+.news__navigation {
+  position: relative;
+  top: -29px;
+
+  @include vp-1439 {
+    top: -4px;
+  }
+
+  @include vp-767 {
+    top: -2px;
+  }
+}
+
+.news__pagination.swiper-pagination.swiper-pagination-horizontal {
+  position: static;
+  display: flex;
+  justify-content: center;
+  margin-top: 39px;
+  margin-bottom: -24px;
+  gap: 20px;
+  transform: translateX(26px);
+
+  @include vp-1439 {
+    margin-top: 30px;
+    transform: translateX(-26px);
+  }
+
+  @include vp-767 {
+    transform: translateX(0);
+    margin-top: 24px;
+    gap: 16px;
+  }
+}
+
+.news__pagination.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  margin: 0;
+  width: 32px;
+  height: 32px;
+  background-color: $color-transparent;
+  color: $color-cerulean-blue;
+  opacity: 0.5;
+
+  @include vp-767 {
+    width: 26px;
+    height: 26px;
+  }
+
+  @include hover-focus {
+    box-shadow: inset 0 0 0 1px $color-cerulean-blue;
+    background-color: $color-transparent;
+    opacity: 1;
+    color: $color-cerulean-blue;
+  }
+
+  @include active {
+    background-color: $color-endeavour;
+    box-shadow: none;
+    color: $color-default-white;
+    opacity: 1;
+  }
+}
+
+.news__pagination.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: $color-cerulean-blue;
+  color: $color-default-white;
+  opacity: 1;
 }
 
 .news__image img {
@@ -51,6 +192,8 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  object-fit: cover;
+  border-radius: 12px;
 }
 
 .news__btn {
@@ -61,6 +204,10 @@
 
   @include vp-1439 {
     transform: translateY(-3px);
+  }
+
+  @include vp-767 {
+    transform: translate(8px, -3px);
   }
 
   span {
@@ -90,69 +237,75 @@
 
 .news__subtitle {
   position: relative;
-  width: 194px;
+  width: 214px;
   max-width: 100%;
   background-color: $color-alabaster;
-  padding: 18px 36px 0 18px;
-  border-radius: 12px 12px 0 0;
-  transform: translateY(3px);
+  padding: 3px 10px 4px 0;
+  border-radius: 0 12px 0 0;
+  transform: translateY(2px);
 
   @include vp-1439 {
-    width: 173px;
-    padding-top: 17px;
+    width: 207px;
+    padding-top: 2px;
+    transform: translateY(3px);
   }
 
   @include vp-767 {
-    width: 146px;
-    padding-right: 35px;
-    padding-top: 27px;
+    width: 200px;
+    padding: 10px 18px 4px 0;
   }
 
   h3 {
+    margin: 0;
     font-weight: 400;
     font-size: 24px;
     line-height: 26px;
     color: $color-cerulean-blue;
-    transform: translateY(-5px);
+    transform: translateY(1px);
 
     @include vp-1439 {
       font-size: 20px;
       line-height: 24px;
-      transform: translateY(-4px);
+      transform: translateY(3px);
     }
 
     @include vp-767 {
       font-size: 16px;
       line-height: 18px;
-      transform: translateY(-9px);
+      transform: translateY(0);
     }
   }
 
   &::after {
     position: absolute;
     content: "";
-    width: 18px;
-    height: 18px;
-    background-image: url("../../img/svg/angle-programs.svg");
-    bottom: 3px;
-    right: -18px;
+    width: 16px;
+    height: 16px;
+    background-image: url("../../img/svg/angle-news.svg");
+    bottom: 0;
+    right: -16px;
+
+    @include vp-1440 {
+      bottom: 2px;
+    }
   }
 }
 
 .news__text {
   p {
+    margin: 0;
     font-size: 14px;
     line-height: 18px;
-    width: 239px;
+    width: 176px;
     transform: translateY(-2px);
 
     @include vp-1439 {
       line-height: 20px;
-      width: 181px;
       transform: translateY(-3px);
     }
 
     @include vp-767 {
+      width: 213px;
       font-size: 12px;
       line-height: 14px;
       transform: translateY(-2px);
@@ -161,23 +314,79 @@
 }
 
 .news__wrapper {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 321px;
+  width: 240px;
   background-color: $color-alabaster;
-  padding: 10px 18px;
-  min-height: 79px;
-  border-radius: 0 12px 0 12px;
+  padding: 11px 18px 10px;
+  padding-left: 0;
+  border-radius: 0 12px;
 
   @include vp-1439 {
-    width: 263px;
-    min-height: 77px;
-    padding-bottom: 7px;
+    min-height: 57px;
+    padding-top: 10px;
+    transform: translateY(3px);
   }
 
   @include vp-767 {
-    width: 100%;
-    min-height: 69px;
+    width: 263px;
+    min-height: 52px;
+    padding-top: 15px;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 16px;
+    height: 16px;
+    background-image: url("../../img/svg/angle-news.svg");
+    bottom: 3px;
+    right: -16px;
+
+    @include vp-1440 {
+      bottom: 0;
+    }
+  }
+}
+
+.news__time {
+  position: relative;
+  width: 78px;
+  background-color: $color-alabaster;
+  padding: 2px 10px 4px 0;
+  border-radius: 0 12px 0 0;
+  transform: translateY(6px);
+
+  @include vp-1439 {
+    transform: translateY(8px);
+  }
+
+  time {
+    margin: 0;
+    font-size: 12px;
+    line-height: 12px;
+    transform: translateY(-5px);
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 16px;
+    height: 16px;
+    background-image: url("../../img/svg/angle-news.svg");
+    bottom: 4px;
+    right: -16px;
+  }
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 16px;
+    height: 16px;
+    background-image: url("../../img/svg/angle-news.svg");
+    top: -16px;
+    left: 0;
   }
 }
