--- a/source/sass/blocks/tab.scss
+++ b/source/sass/blocks/tab.scss
@@ -6,32 +6,33 @@
   text-transform: uppercase;
   color: $color-cerulean-blue;
   background-color: $color-transparent;
-  padding: 14px 26px;
+  padding: 13px 26px;
   border-radius: 20px;
   border: none;
   outline: none;
   opacity: 0.6;
   cursor: pointer;
+  user-select: none;
 
   @include vp-1439 {
-    padding: 14px 20px;
+    padding: 12px 20px;
   }
 
   @include vp-767 {
-    padding: 10px 14px;
+    padding: 9px 14px 8px;
     font-size: 12px;
     line-height: 12px;
-  }
-
-  &--current {
-    box-shadow: inset 0 0 0 1px currentColor;
-    color: $color-cerulean-blue;
-    opacity: 1;
-    cursor: default;
-    pointer-events: none;
   }
 
   @include hover-focus {
     opacity: 1;
   }
+}
+
+.tab.current {
+  box-shadow: inset 0 0 0 1px currentColor;
+  color: $color-cerulean-blue;
+  opacity: 1;
+  cursor: default;
+  pointer-events: none;
 }
