--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 
 @import "vendor/normalize";
 @import "vendor/data-accordion";
+@import "vendor/custom-select";
 
 // Global
 // ---------------------------------
